// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual publishing script should handle error message if the publishing is canceled by the user via the prompt 1`] = `"Publishing manually canceled."`;

exports[`Manual publishing script should throw an error if the editor is missing 1`] = `"Registry editor is missing. Publishing failed."`;

exports[`Manual publishing script should throw an error if the token is missing 1`] = `"Registry token is missing. Publishing failed."`;

exports[`Manual publishing script should work correctly if expected options provided 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "registryEditor": "cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "spaceName": "mock_space",
}
`;

exports[`Manual publishing script should work correctly if no space name provided 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "registryEditor": "cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "spaceName": undefined,
}
`;

exports[`Manual publishing script should work correctly with default buildDir value "build" 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "registryEditor": "cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "spaceName": "mock_space",
}
`;
